# arc

./: .env.example  .gitignore  404.astro  Dockerfile  README.md  about.astro  architect.astro  audit.astro  contact.astro  image_blocks.json  index.astro  next.config.ts  package-lock.json  package.json  privacy.astro  terms.astro
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  campaigns.py  caw.py  generated_articles.py  leads.py  locations.py  router.py  site_contents.py  site_displays.py
backend/app/db/: __init__.py  base.py  connection.py
backend/app/models/: __init__.py  analytics.py  api_logs.py  assembly.py  campaigns.py  caw.py  foundation.py  leads.py  pseo.py  site_display.py  system.py
backend/app/schemas/: campaigns.py  common.py  leads.py  locations.py  site_content.py  site_display.py  tenant_page.py  tenant_resolve.py
backend/app/services/: caw.py  content_matrix.py  seed_from_exports.py  site_display.py
docs/: DATABASE_TENANT_MODEL.md  MIGRATION_ORIGINAL_DB.md
frontend/: Dockerfile  package-lock.json  package.json
lib/: content.ts  db.ts  seo.ts
schema/: 001_base.sql  002_pseo.sql  003_site_display.sql  004_foundation.sql  005_walls.sql  006_analytics.sql  007_system.sql  008_assembly.sql  009_caw.sql  010_seed_demo_tenants.sql  011_seed_preview_slug.sql  run_all.sql
scripts/: migrate-from-original-postgres.sh
(+69 files in other folders)
